memos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memos
  namespace: memos
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
      - memos.lag0.com.br
    secretName: lag0-memos-certificate
  rules:
  - host: memos.lag0.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: memos
            port:
              number: 9000
  ingressClassName: nginx
